2005-06-10  Ryan Lortie  <desrt@desrt.ca>

	* src/frames.c: Prevent using the address of a local variable
	  as a hash key.  (Bug #307209)

	* src/xprops.c (meta_prop_get_values): Fix a small leak in the
	  case of a SYNC_COUNTER property value and HAVE_XSYNC not
	  defined.  (Bug #307214)

2005-06-07  Ray Strode  <rstrode@redhat.com>

	Cleanup font data when done with it (bug 306720).

	* src/effects.c (draw_xor_rect): free font info structure.
	* src/screen.c (meta_screen_new): pass a 1 not a 0 to
	XFreeFontInfo to free font info structure.
	(meta_screen_free): call XUnloadFont on GC font before freeing
	the GC.

2005-06-02  Elijah Newren  <newren@gmail.com>

	* src/window.c (meta_window_focus): if the window has a modal
	transient which is being unmanaged, don't focus it.  Fixes the
	Metacity issue reported in #305362.

2005-05-30  Ray Strode  <rstrode@redhat.com>

	Bug 305564 again.

	When drawing XOR resize popup use "fixed" font instead of
	-misc-fixed-*-16-* xlfd.  Should work on more xservers.

	Also take steps to fail better if the xserver isn't 
	cooperating. 
	
	* src/effects.c (draw_xor_rect): if we can't draw font box
	for whatever reason, at least draw grid frames.
	
	* src/screen.c (meta_screen_new): use fixed alias instead
	of a xfld.  Don't pass GCFont to XCreateGC if font couldn't
	be loaded.  Print a warning if font couldn't be loaded.

2005-05-26  Elijah Newren  <newren@gmail.com>

	* HACKING: Add a clarification that METACITY_VERBOSE needs to be
	accompanied by METACITY_USE_LOGFILE

2005-05-26  Elijah Newren  <newren@gmail.com>

	* src/window.c (meta_window_configure_request): Patch from Greg
	Hudson to make sure window position is calculated correctly for
	reconfigure requests when part of the XWindowChanges structure is
	uninitialized.  Fixes #305257.

2005-05-26  Ray Strode  <rstrode@redhat.com>
	
	Actually commit the stuff mentioned in the last 
	ChangeLog entry.

2005-05-26  Ray Strode  <rstrode@redhat.com>
