@@ -1,3 +1,9 @@
+Sun Jun 26 11:19:18 2005  Soeren Sandmann  <sandmann@redhat.com>
+
+	* src/frames.c: Add a cache of pixmaps for recently exposed frame
+	areas. Makes metacity a bit faster when dragging windows around.
+	See bug 141813.
+
 2005-06-10  Ryan Lortie  <desrt@desrt.ca>
 
 	* src/frames.c: Prevent using the address of a local variable
